# todo-app

./: .gitignore  Cargo.toml  todos.db
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240308200524_todo.sql
backend/src/: error.rs  main.rs  routes.rs
backend/src/model/: db.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/Form/: Form.jsx
frontend/src/TodoCard/: TodoCard.jsx
frontend/todo_frontend/: package-lock.json
frontend/todo_frontend/src/: App.jsx  main.jsx
frontend/todo_frontend/src/FilterButton/: FilterButton.jsx
frontend/todo_frontend/src/Form/: Form.jsx
frontend/todo_frontend/src/TodoCard/: TodoCard.css
frontend/todo_frontend/src/TodoCardList/: TodoCardList.jsx
src/: main.rs  prelude.rs
src/model/: db.rs  models.rs
