[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = {version = "*",features = ["full"]}
